# RustGnuplot

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Readme.md  axes2d.html  axes3d.html  cargo_util.py  coordinates.html  datatype.html  example.rs  example1.rs  example2.rs  figure.html  gnuplot.rs  index.html  js.patch  main.css  options.html  patch.sh  pkg.rs  rust.css  rustfmt.toml  setup_venv.sh
.github/workflows/: continuous-integration.yml  update-docs.yml
cmake/: Findcargo.cmake  Findrustc.cmake  Findrustdoc.cmake  Rust.cmake
doc/: Cargo.toml  aliases.js  ayu.css  crates.js  dark.css  gh_pages_upload.sh  light.css  main.css  main.js  rustdoc.css  search-index.js  settings.html  source-files.js  storage.js  theme.js
doc/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
doc/delete_me/: all.html  index.html
doc/gnuplot/: Axes3D.t.html  AxesCommon.t.html  BorderLocation2D.t.html  DataType.t.html  HELIX.v.html  LegendOption.t.html  MarginSide.t.html  RAINBOW.v.html  Tick.t.html  all.html  constant.COLOR.html  constant.GRAY.html  constant.HELIX.html  constant.HOT.html  constant.RAINBOW.html  enum.AlignType.html  enum.ArrowheadType.html  enum.AutoOption.html  enum.BorderLocation2D.html  enum.ContourStyle.html  enum.Coordinate.html  enum.DashType.html  enum.FillPatternType.html  enum.FillRegionType.html  enum.LabelOption.html  enum.LegendOption.html  enum.MarginSide.html  enum.MultiplotFillDirection.html  enum.MultiplotFillOrder.html  enum.PaletteType.html  enum.PlotOption.html  enum.Tick.html  enum.TickOption.html  enum.XAxis.html  enum.YAxis.html  index.html  main.css  main.js  search-index.js  sidebar-items.js  (+10 more)
doc/gnuplot/axes2d/: Axes2D.t.html  index.html  sidebar-items.js  struct.Axes2D.html
doc/gnuplot/axes2d/Axes2D/: structfield.common.html
doc/gnuplot/axes2d/private/: fn.new_axes2d.html  index.html
doc/gnuplot/axes3d/: index.html  sidebar-items.js  struct.Axes3D.html
doc/gnuplot/axes3d/Axes3D/: structfield.common.html
doc/gnuplot/axes3d/private/: fn.new_axes3d.html  index.html
doc/gnuplot/axes_common/: enum.LabelType.html  enum.PlotType.html  enum.TickType.html  fn.char_to_symbol.html  fn.write_out_label_options.html  index.html  sidebar-items.js  trait.AxesCommon.html
doc/gnuplot/axes_common/LabelType/: variant.AxesTicks.html  variant.Label.html  variant.Title.html  variant.XLabel.html  variant.YLabel.html
doc/gnuplot/axes_common/PlotType/: variant.Boxes.html  variant.FillBetween.html  variant.Lines.html  variant.LinesPoints.html  variant.Points.html  variant.XErrorLines.html  variant.YErrorLines.html
doc/gnuplot/axes_common/TickType/: variant.XTics.html  variant.YTics.html
doc/gnuplot/coordinates/: Coordinate.t.html  enum.Coordinate.html  index.html  sidebar-items.js  type.Coordinate.html
doc/gnuplot/coordinates/Coordinate/: variant.Axis.html  variant.Graph.html
doc/gnuplot/coordinates/private/: index.html
doc/gnuplot/datatype/: index.html  sidebar-items.js  trait.DataType.html
doc/gnuplot/error_types/: struct.GnuplotInitError.html
doc/gnuplot/figure/: Figure.t.html  enum.AxesVariant.html  index.html  sidebar-items.js  struct.CloseSentinel.html  struct.Figure.html
doc/gnuplot/figure/Figure/: structfield.axes.html  structfield.num_cols.html  structfield.num_rows.html  structfield.output_file.html  structfield.terminal.html
doc/gnuplot/internal/: index.html
doc/gnuplot/internal/axes2d/: index.html  (+3 more)
doc/gnuplot/options/: AlignType.t.html  ArrowheadType.t.html  AutoOption.t.html  ContourStyle.t.html  DashType.t.html  FillRegionType.t.html  HOT.v.html  LabelOption.t.html  PaletteType.t.html  PlotOption.t.html  TickOption.t.html  constant.COLOR.html  constant.GRAY.html  constant.HELIX.html  constant.HOT.html  constant.RAINBOW.html  enum.AlignType.html  enum.ArrowheadType.html  enum.AutoOption.html  enum.BorderLocation2D.html  enum.ContourStyle.html  enum.DashType.html  enum.FillPatternType.html  enum.FillRegion.html  enum.FillRegionType.html  enum.LabelOption.html  enum.LegendOption.html  enum.MarginSide.html  enum.MultiplotFillDirection.html  enum.MultiplotFillOrder.html  enum.PaletteType.html  enum.PlotOption.html  enum.Tick.html  enum.TickOption.html  enum.XAxis.html  enum.YAxis.html  index.html  sidebar-items.js  struct.GnuplotVersion.html  type.AlignType.html  (+11 more)
doc/gnuplot/writer/: fn.to_sci.html  index.html  sidebar-items.js  trait.PlotWriter.html
doc/implementors/gnuplot/: trait.AxesCommon.js  trait.DataType.js
doc/src/byteorder/: io.rs.html  lib.rs.html
doc/src/delete_me/: dummy.rs.html
doc/src/gnuplot/: axes2d.rs.html  axes3d.rs.html  axes_common.rs.html  coordinates.rs.html  datatype.rs.html  error_types.rs.html  figure.rs.html  lib.rs.html  options.rs.html  util.rs.html  writer.rs.html
examples/: Cargo.toml  animation_example.rs  box_and_whisker.rs  color_cycling.rs  common.rs  dash_type.rs  example1.rs  example2.rs  example3.rs  example4.rs  gif.rs  inverse_api.rs  lines_3d.rs  lines_points_3d.rs  multiplot_options.rs  patterns.rs  points_3d.rs  readme_example.rs  time.rs
gnuplot/: Cargo.toml
gnuplot/examples/: animation_example.rs  box_and_whisker.rs  box_xy_error.rs  color.rs  color_cycling.rs  common.rs  dash_type.rs  example1.rs  example2.rs  example3.rs  example4.rs  gif.rs  inverse_api.rs  lines_3d.rs  lines_points_3d.rs  multiple_axes.rs  multiplot_options.rs  patterns.rs  points_3d.rs  polar.rs  polygons.rs  text.rs  variable_color.rs
gnuplot/src/: axes2d.rs  axes3d.rs  axes_common.rs  axes_polar.rs  color.rs  coordinates.rs  datatype.rs  error_types.rs  figure.rs  lib.rs  options.rs  util.rs  writer.rs
gnuplot/src/palettes/: cm_listed.rs  mod.rs
gnuplot/src/palletes/: cm_listed.rs  mod.rs
src/: axes2d.rs  axes3d.rs  axes_common.rs  coordinates.rs  datatype.rs  error_types.rs  figure.rs  gnuplot.rs  lib.rs  options.rs  util.rs  writer.rs
src/internal/: axes2d.rs  axes3d.rs  coordinates.rs
(+106 files in other folders)
