[package]

name = "gnuplot"
version = "0.0.11"
license = "LGPL-3.0"
repository = "https://github.com/SiegeLord/RustGnuplot"
documentation = "http://siegelord.github.io/RustGnuplot/doc/gnuplot/index.html"
keywords = ["plots", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Rust gnuplot controller"

[lib]

name = "gnuplot"
path = "src/lib.rs"

[[example]]

name = "example1"
path = "examples/example1.rs"

[[example]]

name = "example2"
path = "examples/example2.rs"

[[example]]

name = "example3"
path = "examples/example3.rs"

[[example]]

name = "example4"
path = "examples/example4.rs"

[[example]]

name = "animation_example"
path = "examples/animation_example.rs"
